# Compiler

./: .gitignore  CMakeLists.txt  Compiler.kdev4
cmake/Modules/: FindCMocka.cmake
entregas/entrega1/: ENTRADA.txt
entregas/entrega1/code/: Makefile  main.c  token.c  token.h
entregas/entrega2/: BNF.txt  EXEMPLO.txt  WIRTH.txt
entregas/entrega3/: ENTRADA.txt  README.txt
entregas/entrega3/code/: Makefile  main.c  syntatic.h  token.h  util.c
entregas/entrega6/code/: syntatic.c
resources/: WIRTH.txt
resources/JFLAP/: atribuicao.xml  chamada.xml  comando.xml  condicional.xml  contabool.xml  contadecimal.xml  contafloat.xml  definicao.xml  escopo.xml  expressao.xml  funcao.xml  programa.xml  repeticao.xml  retorno.xml  termocomp.xml  termodecimal.xml  termoprimario.xml  variavel.xml
source/: CMakeLists.txt
source/inc/: lex.h  syntatic.h  token.h  util.h
source/src/: lex.c  syntatic.c  token.c  util.c
source/tests/: CMakeLists.txt  lex_test.c  lex_test.txt  syntatic_test.c  syntatic_test.txt
